k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finagent-ops-internal-service
  namespace: default
  labels:
    app.kubernetes.io/name: finagent-ops
    app.kubernetes.io/component: internal-service
spec:
  type: ClusterIP
  selector:
    app: finagent-ops
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: finagent-ops-external-service
  namespace: default
  labels:
    app.kubernetes.io/name: finagent-ops
    app.kubernetes.io/component: external-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: finagent-ops
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
