k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
        app.kubernetes.io/name: worker
    spec:
      containers:
      - name: worker
        image: worker:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: dummy
  selector:
    app: worker
